--- a/Projet/bubbleTea&sapin.ipynb
+++ b/Projet/bubbleTea&sapin.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Dessine la thé de bulles (Bubble Tea) et le Sapin\n",
+    "Author: DANG Vu My Linh & \n",
     "\n",
     "#### Objectif dessine des images qui sont le même à l'image suivant: \n",
     "<div style=\"display:flex;justify-content: space-between\">\n",
