put image to center

--- a/Projet/bubbleTea&sapin.ipynb
+++ b/Projet/bubbleTea&sapin.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Dessine la thé de bulles (Bubble Tea) et le Sapin\n",
-    "Author: DANG Vu My Linh & \n",
+    "Auteur: DANG Vu My Linh & Ghislain OKIE\n",
     "\n",
     "#### Objectif dessine des images qui sont le même à l'image suivant: \n",
-    "<div style=\"display:flex;justify-content: space-between\">\n",
+    "<div style=\"display:flex;justify-content: center\">\n",
     "<div style=\"text-align: center; margin: 10px 20px; padding: 10px\">\n",
     "<p>Dessine la thé à bulles</p>\n",
     "<img src=\"https://raw.githubusercontent.com/linhdangvu/bubbletea-sapin/main/bubbletea.jpg\" alt=\"Bubble Tea\" style=\"width:100px; height: 150px\">\n",
