--- a/Projet/bubbleTea&sapin.ipynb
+++ b/Projet/bubbleTea&sapin.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Dessine la thé de bulles (Bubble Tea) et le Sapin\n",
-    "Auteur: DANG Vu My Linh & Ghislain OKIE\n",
+    "Auteur: Vu My Linh DANG & Ghislain OKIE\n",
     "\n",
     "#### Objectif dessine des images qui sont le même à l'image suivant: \n",
     "<div style=\"display:flex;justify-content: center\">\n",
