--- a/Projet/bubbleTea&sapin.ipynb
+++ b/Projet/bubbleTea&sapin.ipynb
@@ -511,7 +511,7 @@
     "b_1x_1 + b_2=y_1\\\\\n",
     "a_1x_0 + a_2-b_1x_1 - b_2=0\n",
     "\\end{cases} $$ \n",
-    "- Coresspondant à cette matrice\n",
+    "- Correspondant à cette matrice\n",
     "$$ \n",
     "\\begin{pmatrix}\n",
     "x_0 & 1 & 0 & 0 \\\\\n",
@@ -599,7 +599,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
